--- a/lib/birds_inc_style.css
+++ b/lib/birds_inc_style.css
@@ -155,6 +155,7 @@ bodywhite{
   text-decoration: none;
   font-style: italic;
   background: #339999;
+  width: 190px;
 }
 
 .footer_link {
@@ -232,8 +233,9 @@ bodywhite{
   height: auto;
   width: 190px;
   border: 1px solid #ADADAD;
-  text-align:absolute;
+  text-align:left;
   margin-left: -40px;
+  z-index: 1000;
 }
 
 /* 
@@ -242,16 +244,17 @@ bodywhite{
  */
 #menu li:hover ul li:hover {
   background: #339999;
-  color: white;
+  line-height: 30px;
+  width: 190px;
+}
+
+#menu li:hover ul li:hover a{
+  color:white;
 }
 
 #menu li ul li {
   clear:both;
   border-left: 0px solid #FFFFFF;
-}
-
-#menu li ul li+li {
-  /*border-top: 1px solid #ADADAD;*/
 }
 
 #h1teal_gallery_title {
